--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,11 @@
 <div class="onepxvoid"></div>
 <div class="main-content">
     {% block content %} {% endblock %}
+<footer>
+    <div class="ftr">
+
+    </div>
+</footer>
 </div>
 </body>
 </html>
