--- a/static/base/css/base.css
+++ b/static/base/css/base.css
@@ -1,11 +1,11 @@
-body{
+body {
     margin: 0;
     line-height: 1.0;
     position: relative;
 }
 
-.navbar{
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+.navbar {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     display: grid;
     grid-template-columns: 1fr 3fr;
     height: 60px;
@@ -16,27 +16,27 @@ body{
     background-color: #ffffff;
 }
 
-.onepxvoid{
+.onepxvoid {
     top: 60px;
     position: absolute;
     height: 1px;
 }
 
-.title{
+.title {
     text-align: left;
 }
 
-.inner-bar{
+.inner-bar {
     text-align: right;
 }
 
-.main-content{
+.main-content {
     top: 60px;
     position: relative;
     height: 100vh;
 }
 
-a{
+a {
     padding: 14px 16px;
     margin-top: 10px;
     text-decoration: none;
@@ -44,8 +44,23 @@ a{
     font-size: 20px;
 }
 
-a:hover{
+a:hover {
     text-decoration: none;
     color: #ff7133;
+    font-size: 20px;
+}
+
+.ftr {
+    border-top: 1px solid rgba(0, 0, 0, 0.2);
+    height: 90px;
+    margin-top: auto;
+    box-sizing: inherit;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.ftr span {
+    margin: 30px;
+    color: #3e3e3e;
     font-size: 20px;
 }
