--- a/templates/base.html
+++ b/templates/base.html
@@ -33,9 +33,12 @@
     {% block content %} {% endblock %}
 <footer>
     <div class="ftr">
-
+        <span>GLSL Node Editor</span>
+        <span style="text-align: center">Done by <a href=https://github.com/arthur100500">Arthur Alekseev</a> </span>
+        <span style="text-align: end"><a href="https://github.com/arthur100500/glsl-node-editor">Project on GitHub</a></span>
     </div>
 </footer>
 </div>
+
 </body>
 </html>
