--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
 <footer>
     <div class="ftr">
         <span>GLSL Node Editor</span>
-        <span style="text-align: center">Done by <a href=https://github.com/arthur100500">Arthur Alekseev</a> </span>
+        <span style="text-align: center">Done by <a href="https://github.com/arthur100500">Arthur Alekseev</a> </span>
         <span style="text-align: end"><a href="https://github.com/arthur100500/glsl-node-editor">Project on GitHub</a></span>
     </div>
 </footer>
