--- a/static/projects/css/projects.css
+++ b/static/projects/css/projects.css
@@ -3,6 +3,13 @@
     margin: auto;
 }
 
+@media screen and (max-width: 1000px) {
+    .main-content {
+        width: 100%;
+    }
+}
+
+
 .project {
     margin: 10px;
     display: grid;
@@ -20,24 +27,23 @@
 }
 
 .project-data {
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     display: inherit;
 }
 
 .project-name {
     font-size: 300%;
     color: #ff7133;
-    margin:10px;
+    margin: 10px;
 }
 
 .project-description {
-     font-size: 150%;
+    font-size: 150%;
     color: #333333;
-    margin:10px;
+    margin: 10px;
 }
 
 .project-image {
-    aspect-ratio: 16/9;
     width: 250px;
 }
 
@@ -46,26 +52,27 @@
     border-radius: 10px 0 0 10px;
     border-right: 1px solid #e0e0e0;
 }
+
 .new-project {
     text-align: center;
 }
 
-.new-project button{
+.new-project button {
     background-color: #ff7133;
     margin: auto;
     margin-top: 30px;
     margin-bottom: 30px;
     width: auto;
     border: none;
-    padding:30px;
+    padding: 30px;
     border-radius: 10px;
     color: #ffffff;
     font-size: 150%;
-    transition: transform ease-in-out 200ms,background-color ease-in-out 200ms;
+    transition: transform ease-in-out 200ms, background-color ease-in-out 200ms;
 }
 
-.new-project button:hover{
+.new-project button:hover {
     background-color: #e76329;
     transform: scale(1.02);
-    transition: transform ease-in-out 200ms,background-color ease-in-out 200ms;
+    transition: transform ease-in-out 200ms, background-color ease-in-out 200ms;
 }
