--- a/templates/explore.html
+++ b/templates/explore.html
@@ -2,6 +2,11 @@
 
 {% block content %}
     <link rel="stylesheet" href="/static/explore/css/styles.css">
+    <div class="p-title">
+        <h1> Projects </h1>
+        <a style="padding-left: 0" href="explore/nodes">Also see Nodes!</a>
+    </div>
+    <hr>
     <div class="explore">
         {% for project in projects %}
             <div class="project" onclick="document.location = '/project/{{ project.id }}'">
@@ -9,7 +14,7 @@
                     <img class="pr-img" src="/static/project_imgs/{{ project.img_src }}">
                 </div>
                 <div class="project-data">
-                    <span> {{ project.name }} by <b>{{ project.user.name }}</b></span>
+                    <span> <b>{{ project.name }}</b> by {{ project.user.name }}</span>
                 </div>
             </div>
         {% endfor %}
