--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
     <title> GLSL Node editr </title>
 </head>
 <body>
+<div id="page-c">
 <header>
     <div class="navbar">
         <div class="title">
@@ -39,6 +40,6 @@
     </div>
 </footer>
 </div>
-
+</div>
 </body>
 </html>
