--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
         <div>
             <form action="" method="post">
                 {{ login_form.hidden_tag() }}
-                <h1>Login page</h1>
+                <h1>Login</h1>
                 <hr>
                 <p>
                     {{ login_form.email.label }}<br>
