--- a/static/login/login.css
+++ b/static/login/login.css
@@ -1,12 +1,30 @@
+.main-content {
+    width: 1000px;
+    margin: auto;
+}
+
+@media screen and (max-width: 1000px) {
+    .main-content {
+        width: 100%;
+    }
+}
+
+
 .signin-grid{
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
 
+@media screen and (max-width: 700px) {
+    .signin-grid{
+        grid-template-columns: 1fr;
+    }
+}
+
 form{
-    background-color: #f0f0f0;
+    background-color: #fefefe;
     border-radius: 10px;
     padding: 40px;
     margin: 40px;
-    box-shadow: 0 0 50px rgba(0,0,0,0.35);
+    box-shadow: 0 0 20px rgba(0,0,0,0.15);
 }
