Sort function added

--- a/templates/editor.html
+++ b/templates/editor.html
@@ -36,10 +36,8 @@
         <button class="control-btn" id="compile-button"><i class="arrow arrow-right-compile"></i>Compile</button>
         <button class="control-btn" id="save-as-project-button">Save Project</button>
         <button class="control-btn" id="save-as-shader-button">Save as shader</button>
-        <label class="control-btn" for="load-project-button">
-            <center>Load Project</center>
-        </label>
-        <input id="load-project-button" hidden></input>
+        <button class="control-btn" id="sort-button">Sort nodes</button>
+
     </div>
     <div class="node-creator-buttons">
         <button class="control-btn" id="create-node-confirm">Create</button>
@@ -67,5 +65,6 @@
     <script src="/static/editor/js/base/projectLoader.js"></script>
     <script src="/static/editor/js/base/contextmenu.js"></script>
     <script src="/static/editor/js/ui/resizer.js"></script>
+    <script src="/static/editor/js/sort/sort.js"></script>
 {% endblock %}
 
