--- a/static/base/css/base.css
+++ b/static/base/css/base.css
@@ -1,66 +1,66 @@
 body {
-    margin: 0;
-    line-height: 1.0;
-    position: relative;
+  margin: 0;
+  line-height: 1;
+  position: relative;
 }
 
 .navbar {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-    height: 60px;
-    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
-    z-index: 11;
-    position: absolute;
-    width: 100%;
-    background-color: #ffffff;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  height: 60px;
+  box-shadow: 0 1px 0 rgb(0 0 0 / 20%);
+  z-index: 11;
+  position: absolute;
+  width: 100%;
+  background-color: #fff;
 }
 
 .onepxvoid {
-    top: 60px;
-    position: absolute;
-    height: 1px;
+  top: 60px;
+  position: absolute;
+  height: 1px;
 }
 
 .title {
-    text-align: left;
+  text-align: left;
 }
 
 .inner-bar {
-    text-align: right;
+  text-align: right;
 }
 
 .main-content {
-    top: 60px;
-    position: relative;
-    height: 100vh;
+  top: 60px;
+  position: relative;
+  height: 100vh;
 }
 
 a {
-    padding: 14px 16px;
-    margin-top: 10px;
-    text-decoration: none;
-    color: #3e3e3e;
-    font-size: 20px;
+  padding: 14px 16px;
+  margin-top: 10px;
+  text-decoration: none;
+  color: #3e3e3e;
+  font-size: 20px;
 }
 
 a:hover {
-    text-decoration: none;
-    color: #ff7133;
-    font-size: 20px;
+  text-decoration: none;
+  color: #ff7133;
+  font-size: 20px;
 }
 
 .ftr {
-    border-top: 1px solid rgba(0, 0, 0, 0.2);
-    height: 90px;
-    margin-top: auto;
-    box-sizing: inherit;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+  border-top: 1px solid rgb(0 0 0 / 20%);
+  height: 90px;
+  margin-top: auto;
+  box-sizing: inherit;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 .ftr span {
-    margin: 30px;
-    color: #3e3e3e;
-    font-size: 20px;
+  margin: 30px;
+  color: #3e3e3e;
+  font-size: 20px;
 }
