--- a/static/editor/css/styles.css
+++ b/static/editor/css/styles.css
@@ -13,11 +13,8 @@ body {
   outline: none;
   margin: 5px;
   border: 0;
-  font-family: Arial;
-  padding-bottom: 6px;
-  padding-left: 9px;
-  padding-right: 9px;
-  padding-top: 6px;
+  font-family: Arial, sans-serif;
+  padding: 6px 9px;
   margin-left: 5px;
   margin-right: 5px;
   border-radius: 12px;
@@ -30,11 +27,8 @@ body {
   outline: none;
   margin: 5px;
   border: 0;
-  font-family: Arial;
-  padding-bottom: 6px;
-  padding-left: 9px;
-  padding-right: 9px;
-  padding-top: 6px;
+  font-family: Arial, sans-serif;
+  padding: 6px 9px;
   margin-left: 5px;
   margin-right: 5px;
   border-radius: 12px;
@@ -47,11 +41,8 @@ body {
   outline: none;
   margin: 5px;
   border: 0;
-  font-family: Arial;
-  padding-bottom: 6px;
-  padding-left: 9px;
-  padding-right: 9px;
-  padding-top: 6px;
+  font-family: Arial, sans-serif;
+  padding: 6px 9px;
   margin-left: 5px;
   margin-right: 5px;
   border-radius: 12px;
@@ -64,11 +55,8 @@ body {
   outline: none;
   margin: 5px;
   border: 0;
-  font-family: Arial;
-  padding-bottom: 6px;
-  padding-left: 9px;
-  padding-right: 9px;
-  padding-top: 6px;
+  font-family: Arial, sans-serif;
+  padding: 6px 9px;
   margin-left: 5px;
   margin-right: 5px;
   border-radius: 12px;
@@ -79,12 +67,9 @@ body {
 
 .control-btn:hover {
   outline: none;
-  font-family: Arial;
+  font-family: Arial, sans-serif;
   border: 0;
-  padding-bottom: 6px;
-  padding-left: 6px;
-  padding-right: 6px;
-  padding-top: 6px;
+  padding: 6px 9px;
   margin-left: 5px;
   margin-right: 5px;
   border-radius: 12px;
@@ -185,7 +170,7 @@ body {
 }
 
 #context-menu .item {
-  font-family: Arial;
+  font-family: Arial, sans-serif;
   font-size: 100%;
   padding: 8px 10px;
   cursor: pointer;
