--- a/static/nodes/css/styles.css
+++ b/static/nodes/css/styles.css
@@ -27,19 +27,40 @@
 }
 
 .node-data {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family:
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    "Helvetica Neue",
+    Arial,
+    "Noto Sans",
+    sans-serif,
+    "Apple Color Emoji",
+    "Segoe UI Emoji",
+    "Segoe UI Symbol",
+    "Noto Color Emoji";
   display: inherit;
   font-size: 200%;
 }
 
 .used {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family:
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    "Helvetica Neue",
+    Arial,
+    "Noto Sans",
+    sans-serif,
+    "Apple Color Emoji",
+    "Segoe UI Emoji",
+    "Segoe UI Symbol",
+    "Noto Color Emoji";
   display: inherit;
   font-size: 200%;
-  color: #10ff00;
-  user-select: none; /* Safari */
-  user-select: none; /* Firefox */
-  user-select: none; /* IE10+/Edge */
+  color: #10ff00; /* Safari */ /* Firefox */ /* IE10+/Edge */
   user-select: none; /* Standard */
   margin: 10px;
   padding: 10px;
@@ -52,13 +73,22 @@
 }
 
 .unused {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family:
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    "Helvetica Neue",
+    Arial,
+    "Noto Sans",
+    sans-serif,
+    "Apple Color Emoji",
+    "Segoe UI Emoji",
+    "Segoe UI Symbol",
+    "Noto Color Emoji";
   display: inherit;
   font-size: 200%;
-  color: #ff1000;
-  user-select: none; /* Safari */
-  user-select: none; /* Firefox */
-  user-select: none; /* IE10+/Edge */
+  color: #ff1000; /* Safari */ /* Firefox */ /* IE10+/Edge */
   user-select: none; /* Standard */
   margin: 10px;
   padding: 10px;
