--- a/static/editor/css/styles.css
+++ b/static/editor/css/styles.css
@@ -134,6 +134,7 @@ body {
   height: 100%;
   box-shadow: 0 0 10px rgb(0 0 0 / 50%);
   background-color: #dedede;
+  overflow-y: scroll;
 }
 
 .node-editor {
