--- a/static/nodes/css/styles.css
+++ b/static/nodes/css/styles.css
@@ -15,15 +15,21 @@
   display: grid;
   grid-template-columns: 1fr 250px;
   border-radius: 10px;
-  border: 1px solid #e0e0e0;
-  background-color: #fefefe;
+  border: 1px solid #404040;
+  background-color: #222222;
   box-shadow: 0 0 20px rgb(0 0 0 / 5%);
-  transition: background-color ease-in-out 60ms;
+  transition: background-color ease-in-out 60ms,
+  box-shadow ease-in-out 60ms,
+  border ease-in-out 60ms;
 }
 
 .node:hover {
-  background-color: #f6f6f6;
-  transition: background-color ease-in-out 60ms;
+  border: 1px solid #ff7133;
+  box-shadow: 0 0 5px #ff70338e;
+  background-color: #303030;
+  transition: background-color ease-in-out 60ms,
+  box-shadow ease-in-out 60ms,
+  border ease-in-out 60ms;
 }
 
 .node-data {
@@ -42,6 +48,7 @@
     "Noto Color Emoji";
   display: inherit;
   font-size: 200%;
+  color: #dddddd;
 }
 
 .used {
@@ -65,11 +72,13 @@
   margin: 10px;
   padding: 10px;
   border-radius: 10px;
-  border: 1px solid #e0e0e0;
-  background-color: #fefefe;
+  border: 1px solid #404040;
+  background-color: #202020;
   box-shadow: 0 0 20px rgb(0 0 0 / 5%);
   text-align: center;
-  transition: background-color ease-in-out 200ms, color ease-in-out 200ms;
+  transition: background-color ease-in-out 60ms,
+  box-shadow ease-in-out 60ms,
+  border ease-in-out 60ms;
 }
 
 .unused {
@@ -93,23 +102,31 @@
   margin: 10px;
   padding: 10px;
   border-radius: 10px;
-  border: 1px solid #e0e0e0;
-  background-color: #fefefe;
+  border: 1px solid #404040;
+  background-color: #202020;
   box-shadow: 0 0 20px rgb(0 0 0 / 5%);
   text-align: center;
-  transition: background-color ease-in-out 200ms, color ease-in-out 200ms;
+  transition: background-color ease-in-out 60ms,
+  box-shadow ease-in-out 60ms,
+  border ease-in-out 60ms;
 }
 
 .used:hover {
-  background-color: #10ff00;
-  color: #fff;
-  transition: background-color ease-in-out 200ms, color ease-in-out 200ms;
+  background-color: #303030;
+  border: 1px solid #10ff00;
+  box-shadow: 0 0 5px #10ff008e;
+  transition: background-color ease-in-out 60ms,
+  box-shadow ease-in-out 60ms,
+  border ease-in-out 60ms;
 }
 
 .unused:hover {
-  background-color: #ff1000;
-  color: #fff;
-  transition: background-color ease-in-out 200ms, color ease-in-out 200ms;
+  background-color: #303030;
+  border: 1px solid #ff1000;
+  box-shadow: 0 0 5px #ff10008e;
+  transition: background-color ease-in-out 60ms,
+  box-shadow ease-in-out 60ms,
+  border ease-in-out 60ms;
 }
 
 .node-c {
