--- a/static/explore/css/styles.css
+++ b/static/explore/css/styles.css
@@ -6,27 +6,33 @@
 .project {
   margin: 10px;
   border-radius: 10px;
-  border: 1px solid #e0e0e0;
-  background-color: #fefefe;
+  border: 1px solid #404040;
+  background-color: #222222;
   box-shadow: 0 0 20px rgb(0 0 0 / 5%);
-  transition: background-color ease-in-out 60ms;
+  transition: background-color ease-in-out 60ms,
+  box-shadow ease-in-out 60ms,
+  border ease-in-out 60ms;
 }
 
 .project:hover {
-  background-color: #f6f6f6;
-  transition: background-color ease-in-out 60ms;
+  background-color: #303030;
+  border: 1px solid #ff7133;
+  box-shadow: 0 0 5px #ff70338e;
+  transition: background-color ease-in-out 60ms,
+  box-shadow ease-in-out 60ms,
+  border ease-in-out 60ms;
 }
 
 .pr-img {
   aspect-ratio: 16/9;
   width: 100%;
   border-radius: 10px 10px 0 0;
-  border-bottom: 1px solid #e0e0e0;
+  border-bottom: 1px solid #404040;
 }
 
 .project-data {
   font-size: 130%;
-  color: #ff7133;
+  color: rgb(255, 113, 51);
   margin: 10px;
 }
 
