--- a/static/projects/css/projects.css
+++ b/static/projects/css/projects.css
@@ -14,15 +14,21 @@
   display: grid;
   grid-template-columns: 250px 1fr;
   border-radius: 10px;
-  border: 1px solid #e0e0e0;
-  background-color: #fefefe;
+  border: 1px solid #404040;
+  background-color: #222222;
   box-shadow: 0 0 20px rgb(0 0 0 / 5%);
-  transition: background-color ease-in-out 60ms;
+  transition: background-color ease-in-out 60ms,
+  box-shadow ease-in-out 60ms,
+  border ease-in-out 60ms;
 }
 
 .project:hover {
-  background-color: #f6f6f6;
-  transition: background-color ease-in-out 60ms;
+  background-color: #252525;
+  border: 1px solid #ff7133;
+  box-shadow: 0 0 5px #ff70338e;
+  transition: background-color ease-in-out 60ms,
+  box-shadow ease-in-out 60ms,
+  border ease-in-out 60ms;
 }
 
 .project-data {
@@ -61,7 +67,7 @@
 .pr-img {
   width: 250px;
   border-radius: 10px 0 0 10px;
-  border-right: 1px solid #e0e0e0;
+  border-right: 1px solid #404040;
 }
 
 .new-project {
