--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
         </div>
         <div class="inner-bar">
             {% if current_user.is_authenticated %}
-                <a>Hi, {{ current_user.name }}! </a>
+                <a style="color: #ff7133">Hi, {{ current_user.name }}! </a>
                 <a href="/project"> Projects </a>
                 <a href="/node"> Nodes </a>
                 <a href="/logout"> Logout </a>
