--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
           crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-nightfall.min.css" rel="stylesheet" media="(prefers-color-scheme: dark)">
     <link rel="stylesheet" href="/static/base/css/base.css">
+    <script src="/static/base/js/notify/notify.min.js"></script>
     <title> GLSL Node editr </title>
 </head>
 <body>
